style.css
html {
    scroll-behavior: smooth;
}

body {
    height: 620vh;
    background-color: black;
}

.sexy {
    animation: fadeInAnimation ease 5s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}

@keyframes fadeInAnimation {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

.date {
    color: white;
    font-family: 'Poppins', sans-serif;
    font-size: 50px;
    font-weight: 100;
    position: absolute;
    left: 30%;
    top: 60%;
    transform: translate(-30%, -60%);
}

.where {
    color: white;
    font-family: 'Poppins', sans-serif;
    font-size: 50px;
    font-weight: 100;
    position: absolute;
    left: 63%;
    top: 60%;
    transform: translate(-63%, -60%);
}

#main_logo {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    animation: fill 0.5s ease forwards 2s;
}

#main_logo path:nth-child(1) {
    stroke-dasharray: 800;
    stroke-dashoffset: 800;
    animation: line-anim 6s ease forwards;
}

#main_logo path:nth-child(2) {
    stroke-dasharray: 750;
    stroke-dashoffset: 750;
    animation: line-anim 6s ease forwards;
}

#main_logo path:nth-child(3) {
    stroke-dasharray: 800;
    stroke-dashoffset: 800;
    animation: line-anim 6s ease forwards;
}

#main_logo path:nth-child(3) {
    stroke-dasharray: 600;
    stroke-dashoffset: 600;
    animation: line-anim 6s ease forwards;
}

#main_logo path:nth-child(4) {
    stroke-dasharray: 800;
    stroke-dashoffset: 800;
    animation: line-anim 6s ease forwards;
}

#main_logo path:nth-child(5) {
    stroke-dasharray: 800;
    stroke-dashoffset: 800;
    animation: line-anim 6s ease forwards;
}

#main_logo path:nth-child(6) {
    stroke-dasharray: 572;
    stroke-dashoffset: 572;
    animation: line-anim 6s ease forwards;
}

#main_logo path:nth-child(7) {
    stroke-dasharray: 900;
    stroke-dashoffset: 900;
    animation: line-anim 6s ease forwards;
}

#main_logo path:nth-child(8) {
    stroke-dasharray: 650;
    stroke-dashoffset: 650;
    animation: line-anim 6s ease forwards;
}

#main_logo path:nth-child(9) {
    stroke-dasharray: 800;
    stroke-dashoffset: 800;
    animation: line-anim 6s ease forwards;
}

#main_logo path:nth-child(10) {
    stroke-dasharray: 800;
    stroke-dashoffset: 800;
    animation: line-anim 6s ease forwards;
}

#main_logo path:nth-child(11) {
    stroke-dasharray: 800;
    stroke-dashoffset: 800;
    animation: line-anim 6s ease forwards;
}

#main_logo path:nth-child(12) {
    stroke-dasharray: 800;
    stroke-dashoffset: 800;
    animation: line-anim 6s ease forwards;
}

#main_logo path:nth-child(13) {
    stroke-dasharray: 800;
    stroke-dashoffset: 800;
    animation: line-anim 6s ease forwards;
}

#main_logo path:nth-child(14) {
    stroke-dasharray: 800;
    stroke-dashoffset: 800;
    animation: line-anim 6s ease forwards;
}

#main_logo path:nth-child(15) {
    stroke-dasharray: 800;
    stroke-dashoffset: 800;
    animation: line-anim 6s ease forwards;
}

#main_logo path:nth-child(16) {
    stroke-dasharray: 800;
    stroke-dashoffset: 800;
    animation: line-anim 6s ease forwards;
}

@keyframes line-anim {
    to {
        stroke-dashoffset: 0;
    }
}

@keyframes fill {
    from {
        fill: transparent;
    }
    to {
        fill: white;
    }
}

@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
.bruh {
    position: absolute;
    top: 80%;
    left: 30%;
    transform: translate(-30%, -80%);
    width: 200px;
    height: 60px;
    text-align: center;
    line-height: 60px;
    color: #fff;
    font-size: 24px;
    text-transform: uppercase;
    text-decoration: none;
    font-family: 'Poppins', sans-serif;
    box-sizing: border-box;
    background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
    background-size: 400%;
    border-radius: 30px;
}

.bruh2 {
    position: absolute;
    top: 80%;
    left: 50%;
    transform: translate(-50%, -80%);
    width: 200px;
    height: 60px;
    text-align: center;
    line-height: 60px;
    color: #fff;
    font-size: 24px;
    text-transform: uppercase;
    text-decoration: none;
    font-family: 'Poppins', sans-serif;
    box-sizing: border-box;
    background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
    background-size: 400%;
    border-radius: 30px;
}

.bruh3 {
    position: absolute;
    top: 80%;
    left: 70%;
    transform: translate(-70%, -80%);
    width: 200px;
    height: 60px;
    text-align: center;
    line-height: 60px;
    color: #fff;
    font-size: 24px;
    text-transform: uppercase;
    text-decoration: none;
    font-family: 'Poppins', sans-serif;
    box-sizing: border-box;
    background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
    background-size: 400%;
    border-radius: 30px;
}

.bruh:hover {
    animation: animated 5s linear infinite;
}

.bruh2:hover {
    animation: animated 5s linear infinite;
}

.bruh3:hover {
    animation: animated 5s linear infinite;
}

@keyframes animated {
    0% {
        background-position: 0%;
    }
    100% {
        background-position: 400%;
    }
}

.bruh:before {
    content: '';
    position: absolute;
    top: -5px;
    left: -5px;
    right: -5px;
    bottom: -5px;
    z-index: -1;
    background-size: 400%;
    border-radius: 40px;
    filter: blur(20px);
}

.bruh2:before {
    content: '';
    position: absolute;
    top: -5px;
    left: -5px;
    right: -5px;
    bottom: -5px;
    z-index: -1;
    background-size: 400%;
    border-radius: 40px;
    filter: blur(20px);
}

.bruh3:before {
    content: '';
    position: absolute;
    top: -5px;
    left: -5px;
    right: -5px;
    bottom: -5px;
    z-index: -1;
    background-size: 400%;
    border-radius: 40px;
    filter: blur(20px);
}

#navbar {
    font-family: 'Poppins', sans-serif;
    font-size: 25px;
    font-weight: 100;
    top: -100px;
    position: fixed;
    transition: top 0.3s;
    z-index: 100;
    background-color: white;
    width: 100%;
    transition: 1.5s;
    /* Transition effect when sliding down (and up) */
}


/* Style the navbar links */

#navbar a {
    float: left;
    display: block;
    color: black;
    text-align: center;
    padding: 15px;
    text-decoration: none;
    transition: 1.5s;
}

#navbar a:hover {
    background-color: #d0d5d2;
}

#home {
    height: 100vh;
}

#about {
    height: 350vh;
}

#main_title {
    padding-top: 50px;
    animation: fill 0.5s ease forwards 2s;
}

.positiontitle {
    margin: 0 auto;
    text-align: center;
}

#main_title path:nth-child(1) {
    stroke-dasharray: 100;
    stroke-dashoffset: 100;
    animation: line-anim 2s ease forwards;
}

#main_title path:nth-child(2) {
    stroke-dasharray: 100;
    stroke-dashoffset: 100;
    animation: line-anim 2s ease forwards;
}

#main_title path:nth-child(3) {
    stroke-dasharray: 100;
    stroke-dashoffset: 100;
    animation: line-anim 2s ease forwards;
}

#main_title path:nth-child(4) {
    stroke-dasharray: 100;
    stroke-dashoffset: 100;
    animation: line-anim 2s ease forwards;
}

#main_title path:nth-child(5) {
    stroke-dasharray: 100;
    stroke-dashoffset: 100;
    animation: line-anim 2s ease forwards;
}

#main_title path:nth-child(6) {
    stroke-dasharray: 120;
    stroke-dashoffset: 120;
    animation: line-anim 2s ease forwards;
}

#main_title path:nth-child(7) {
    stroke-dasharray: 120;
    stroke-dashoffset: 120;
    animation: line-anim 2s ease forwards;
}

.line {
    height: 2px;
    width: 100px;
    background-color: white;
    margin: 0 auto;
}

.line2 {
    height: 2px;
    width: 100px;
    background-color: black;
    margin: 0 auto;
    margin-bottom: 50px;
}

.line3 {
    height: 2px;
    width: 100px;
    background-color: white;
    margin: 0 auto;
    margin-bottom: 50px;
}

.fa-github,
.fa-instagram {
    font-size: 50px;
    color: white;
    margin-top: 10px;
    padding-left: 20px;
    transition: 1.0s;
}

.bruhmoments {
    margin: 0 auto;
    text-align: center;
}

.sub_title {
    font-size: 50px;
    color: white;
    font-family: 'Poppins', sans-serif;
    font-weight: 100;
    text-align: center;
    margin-top: 90px;
}

.des {
    color: white;
    font-family: 'Poppins', sans-serif;
    font-weight: 100;
    text-align: center;
}

.contain {
    position: absolute;
    width: 100%;
}

.td1 {
    width: 33%;
    padding-left: 32px;
}

.td2 {
    width: 33%;
    padding-top: 35px;
    padding-left: 35px;
}

.image_file {
    position: relative;
    left: 50%;
    top: 0%;
    transform: translate(-50%, 0%);
    height: 400px;
    border-radius: 300px;
}

.fa-github:hover {
    transform: scale(1.5);
    color: aqua;
}

.fa-instagram:hover {
    transform: scale(1.5);
    color: aqua;
}

#about_hackathon {
    z-index: 200;
    height: 190vh;
    background-color: white;
}

.title {
    text-align: center;
    color: white;
    font-size: 50px;
    font-family: 'Poppins', sans-serif;
    font-weight: 100;
}

.title3 {
    text-align: center;
    color: black;
    font-size: 50px;
    font-family: 'Poppins', sans-serif;
    font-weight: 100;
    padding-top: 50px;
}

.what {
    color: black;
    font-size: 40px;
    font-family: 'Poppins', sans-serif;
    font-weight: 100;
}

.isit {
    color: black;
    font-size: 40px;
    font-family: 'Poppins', sans-serif;
    font-weight: 100;
    margin-left: 15px;
}

.whatisit {
    text-align: center;
}

#countContainer {
    height: 300px;
    width: 25%;
    margin-left: 30px;
    display: inline-block;
    border-radius: 30px;
}

.stat {
    position: relative;
    left: 50%;
    top: 65%;
    transform: translate(-50%, -65%);
    z-index: 100;
    font-size: 40px;
    font-family: 'Poppins', sans-serif;
    font-weight: 200;
    padding-bottom: 20px;
}

.statnum {
    position: relative;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    padding: 0;
    margin: 0;
    font-size: 50px;
    font-family: 'Poppins', sans-serif;
    font-weight: 100;
}

#map {
    margin: 0 auto;
    text-align: center;
}

#faq {
    height: 100vh;
    background-color: white;
}

.tableboy {
    width: 95%;
    text-align: center;
    margin: 0 auto;
    background-color: white;
}

.cont {
    padding-right: 15px;
    width: 33%;
}

.maincont {
    font-family: 'Poppins', sans-serif;
}

.bruhtitle {
    font-weight: 400;
}

.bruhtitle2 {
    font-weight: 400;
}

#down {
    font-size: 50px;
    text-align: center;
    margin: 0 auto;
    padding-top: 10px;
}

#sponsors {
    height: 100vh;
    background-color: black;
}

.logos {
    margin: 0 auto;
    height: 150px;
}

